// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expect <Button> to render properly 1`] = `
<button
  className="gds-button foo-class gds-button--danger gds-button--sm"
  disabled={false}
  onBlur={[MockFunction]}
  onClick={[MockFunction]}
  style={
    {
      "width": "1000px",
    }
  }
  text="This is text"
  type="button"
>
  My Cool Button
</button>
`;

exports[`Expect <Button> to render properly as blocked 1`] = `
<button
  className="gds-button foo-class gds-button--danger gds-button--sm gds-button--block"
  disabled={false}
  onBlur={[MockFunction]}
  onClick={[MockFunction]}
  style={
    {
      "width": "1000px",
    }
  }
  text="This is text"
  type="button"
>
  My Cool Button
</button>
`;
